--- a/package.json
+++ b/package.json
@@ -10,15 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.3.2",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.0",
     "@tanstack/react-query": "^5.8.7",
+    "@types/mapbox-gl": "^2.7.19",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
     "localforage": "^1.10.0",
+    "mapbox-gl": "^3.0.0",
+    "maplibre-gl": "^3.6.2",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.48.2",
+    "react-icons": "^4.12.0",
+    "react-map-gl": "^7.1.6",
     "react-router-dom": "^6.20.0",
     "recharts": "^2.10.2",
     "sort-by": "^1.2.0",
