--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^4.12.0",
     "react-map-gl": "^7.1.6",
     "react-router-dom": "^6.20.0",
+    "react-type-animation": "^3.2.0",
     "recharts": "^2.10.2",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.1"
